wsz-demo/1-ingress/10-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: istio
  name: ingress
  namespace: demo
spec:
  rules:
  - host: 'istio-ingress.wsz.predic8.de'
    http:
      paths:
      - path: /v1/
        pathType: Prefix
        backend:
          service:
            name: a
            port:
              number: 80
