wsz-demo/1-ingress/11-dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: a
  namespace: demo
spec:
  host: a
  trafficPolicy:
    tls:
      mode: DISABLE
